# cms

api/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
api/bookmarks/: models.py  serializers.py  views.py
api/bookmarks/migrations/: 0001_initial.py  0002_alter_bookmark_table_alter_bookmarktag_table_and_more.py  0003_alter_bookmark_uuid.py  0004_alter_bookmark_resolved_description.py  0005_alter_bookmark_updated.py  0006_alter_bookmark_resolved_title.py  0007_alter_bookmark_url.py  0008_alter_bookmark_uuid.py  0009_alter_bookmark_options_and_more.py
api/cm/: settings.py  urls.py
api/scripts/: add_uuid_to_bookmarks.py
backups/: auth_permission_202404011117.sql  auth_user_202404011117.sql  bookmark_202404011117.sql  django_content_type_202404011117.sql  django_migrations_202404011117.sql  django_session_202404011117.sql
ui/: .env.sample  package.json  pnpm-lock.yaml
ui/src/: App.css  App.js  index.js  routes.js
ui/src/common/: api.js
ui/src/components/bookmarks/: api.js  bookmark-table.js
ui/src/components/shared/: layout.js  sidebar.js
ui/src/pages/: Bookmarks.js  home.js
ui/src/store/: index.js  website.js
ui/src/utils/: constants.js  fn.js
